<resources>
    <string name="app_name">Find Lottery</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="title_home">Feed</string>
    <string name="tricks">Tricks</string>
    <string name="profile">Profile</string>
    <string name="achievements">Achievements</string>
    <string name="game">Game</string>

    <!-- Preference Titles -->
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="title_activity_pdf">Enjoy</string>

    <string name="prerequisites">Don\'t forget about</string>
    <string name="share_game">share game</string>
    <string name="how_it_was">how it was?</string>

    <!--    Errors-->
    <string name="error_unknown">Sorry, something bad happens! Please, try again later.</string>
    <string name="error_http">Network error</string>
    <string name="error_socket">Network error</string>
    <string name="error_null_pointer">Field is empty in the response!</string>
    <string name="get_started">Get started</string>


    <!--  SignUp Screen  -->
    <string name="signup_signUp">Sign Up</string>
    <string name="signup_firstName">First name</string>
    <string name="signup_lastName">Last name</string>
    <string name="signup_mail">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_referenceCode">Reference code</string>
    <string name="signup_submit">submit</string>
    <string name="signup_nickname_error_message">Nick name must contain 4 – 15 characters</string>
    <string name="signup_empty_field_error_message">The field must not be empty</string>
    <string name="signup_invalid_email_error_message">Email address is not valid</string>
    <string name="signup_password_not_long_enough">Password not long enough</string>
    <string name="signup_nickname_not_disposable">Nick name is not disposable</string>
    <string name="signup_nickname_too_large">Nick name is too large</string>
    <string name="signup_nickname_too_small">Nick name is too small</string>
    <string name="signup_first_name_helper_text">Your first name</string>
    <string name="signup_last_name_helper_text">Your last name</string>
    <string name="signup_email_helper_text">Your email address</string>
    <string name="signup_phone_helper_text">Your phone number</string>
    <string name="signup_city_helper_text">Your city</string>
    <string name="signup_password_helper_text">Password must be at least 6 in length and have numeric characters</string>
    <string name="signup_reference_code_helper_text">Your reference code (Optional)</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup_as_seller">SignUp as seller</string>
    <string name="nick_name">Nick Name</string>
    <string name="done">Done</string>

    <string name="forgot_success">Email has been sent</string>
    <string name="messages">Messages</string>
    <string name="tickets">Tickets</string>
    <string name="map">Map</string>
    <string name="logout">Logout</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="city">City</string>
    <string name="signup_id_card">Add your id card photo</string>
    <string name="add_your_selfie">Add your selfie</string>
    <string name="skp">Skp</string>
    <string name="scan_cancelled">Scan cancelled</string>
    <string name="scan_ticket">Scan ticket</string>
    <string name="login">Login</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="password"><![CDATA[<password>]]></string>
    <string name="email_address"><![CDATA[<email address>]]></string>
    <string name="login_greeting">Please login to your account to continue with Find Lottery</string>
    <string name="login_email_title">EMAIL*</string>
    <string name="login_password_title">PASSWORD*</string>
    <string name="send">Send</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="forgot_password_greeting">Enter your password bellow and we\'ll send you email with instructions on how to change your password</string>
    <string name="signup_name_hint"><![CDATA[<name>]]></string>
    <string name="create_account">Create account</string>
    <string name="signup_selfie">SELFIE*</string>
    <string name="signup_name_title">NAME*</string>
    <string name="signup_last_name_hint"><![CDATA[<last name>]]></string>
    <string name="signup_lastname_title">LASTNAME*</string>
    <string name="signup_email_title">EMAIL*</string>
    <string name="signup_email_hint"><![CDATA[<email address>]]></string>
    <string name="signup_password_title">PASSWORD*</string>
    <string name="signup_password_hint"><![CDATA[<password>]]></string>
    <string name="signup_city_title">CITY*</string>
    <string name="signup_city_hinty"><![CDATA[<city>]]></string>
    <string name="signup_phone_hint"><![CDATA[<phone number>]]></string>
    <string name="national_id">NATIONAL ID</string>
    <string name="signup_nid_hinty"><![CDATA[<national id>]]></string>
    <string name="signup_nid_scan_title">NATIONAL ID SCAN DOCUMENT</string>
    <string name="register_now">Register Now</string>
    <string name="signup_as_guest">Signup as buyer</string>
    <string name="signup_terms">By clicking \'Register Now\' you agree with to our terms and conditions without Reservations</string>

    <!--    Draws & tickets-->
    <string name="add_draw">Add Draw</string>
    <string name="add_ticket">Add ticket</string>
    <string name="scan_ticket_button_label">Scan ticket</string>
    <string name="ticket_number">Ticket number</string>
    <string name="progress">Progress</string>
    <string name="set">Set</string>
    <string name="save">Save</string>
    <string name="title_activity_scan">Scan Activity</string>
    <string name="tickets_title">Tickets</string>
    <string name="draws_title">Draws</string>
    <!-- Strings used for fragments for navigation -->

    <string name="upcoming_t">Upcoming</string>

    <!--    win statuses-->
    <string name="won_prefix">You won %1$s</string>
    <string name="won_prize_one_t">You won 1st Prize</string>
    <string name="won_prize_one_close_t">You won prize1Close</string>
    <string name="won_prize_two_t">You won 2nd Prize</string>
    <string name="won_prize_three_t">You won 3rd Prize</string>
    <string name="won_prize_four_t">You won 4th Prize</string>
    <string name="won_prize_five_t">You won 5th Prize</string>
    <string name="won_prize_first_three_t">You won First 3 Digits</string>
    <string name="won_prize_last_2_t">You won Last 2 Digits</string>
    <string name="won_prize_last_3_t">You won Last 3 Digits</string>
    <string name="back">Back</string>
    <string name="remove_message_draw">Do you want to delete this Draw?</string>
    <string name="remove_message_ticket">Do you want to delete this Ticket?</string>
    <string name="delete">Delete</string>
    <string name="price">Price</string>
    <string name="win_tickets_number">Win tickets</string>

    <!--    warnings-->
    <string name="no_date_argument">No date argument</string>
    <string name="operation_not_implemented">Operation is not implemented</string>
    <string name="cancelled">Cancelled</string>
    <string name="incorrect_qr">Incorrect bar code format!</string>
    <string name="no_tickets_warning">No tickets added! Please, add new draw!</string>
    <string name="insert_validation_fail">Please, make sure you insert correct data!</string>
    <string name="unknown_exception">Unknown error</string>
    <string name="null_pointer_exception">Null pointer error</string>
    <string name="timeout_exception">Timeout error</string>
    <string name="illegal_state_exception">Illegal state error</string>
    <string name="please_relogin">"Something went wrong, please re-login"</string>

    <!--    notifications-->
    <string name="channel_description">Get lucky…</string>
    <string name="notification_content">You won a prise</string>
    <string name="notification_big_text">You are lucky guy, enjoy you day</string>

    <!--    win notification-->
    <string name="you_won">YOU WON</string>

    <!--    scanner-->
    <string name="scanner_prompt">Scan your ticket.</string>
    <string name="prompt_message_popup">The code for scanning is just at the left of the ticket number</string>
    <string name="ticket_number_label">TICKET NUMBER*</string>
    <string name="progress_label">PROGRESS*</string>
    <string name="set_label">SET*</string>
    <string name="digit_ticket_number_hint"><![CDATA[<6 digit ticket number>]]></string>
    <string name="digit_progress_number_hint"><![CDATA[<2 digit progress number>]]></string>
    <string name="digit_set_number_hint"><![CDATA[<2 digit set number>]]></string>
    <string name="add_ticket_greeting">Enter manually the ticket numbers with the progressive and set, or use the scanner using the camera.</string>
    <string name="search_hint_ticket_number"><![CDATA[<ticket number>]]></string>

    <string name="map_title">Map</string>
    <string name="contact_seller_warming">Do you want to contact the seller?</string>
    <string name="location_rationale">"Please, enable location service in the application. It require enable all the application functionality."</string>
    <string name="national_id_s1">ID: %s</string>
    <string name="line_s1">Line: %s</string>
    <string name="wechat_s1">WeChat: %s</string>
    <string name="whatsapp_s1">What\'sApp: %s</string>
    <string name="title_activity_fullscreen_photo">Fullscreen Activity</string>
    <string name="update">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout_popup">You are about to logout, do you want to proceed?</string>
    <string name="line_id">Line ID</string>
    <string name="wechat_id">WeChat ID</string>
    <string name="what_sapp">What\'sApp</string>
    <string name="line_id_hint"><![CDATA[<Line ID>]]></string>
    <string name="wechat_id_hint"><![CDATA[<WeChat ID>]]></string>
    <string name="what_sapp_hint"><![CDATA[<What\'sApp>]]></string>
    <string name="language">Language</string>
    <string name="language_thai">ไทย</string>
    <string name="language_english">English</string>
    <string name="title_version_popup">Version Update</string>
    <string name="description_version_popup">There is a new version available, please update to enjoy the benefits</string>
</resources>
