<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/AuthSubTitle"
        android:layout_marginTop="@dimen/auth_top_margin"
        android:text="@string/add_ticket_greeting" />


    <TextView
        style="@style/AuthEditTitle"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/ticket_number_label" />

    <EditText
        android:id="@+id/ticketNumber"
        style="@style/EditTextAppStyle"
        android:layout_marginBottom="8dp"
        android:maxLength="6"
        android:hint="@string/digit_ticket_number_hint"
        android:inputType="numberDecimal"
        android:nextFocusDown="@id/last_name" />

    <TextView
        style="@style/AuthEditTitle"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/progress_label" />

    <EditText
        android:id="@+id/progress"
        style="@style/EditTextAppStyle"
        android:layout_marginBottom="8dp"
        android:maxLength="2"
        android:hint="@string/digit_progress_number_hint"
        android:inputType="numberDecimal"
        android:nextFocusDown="@id/last_name" />

    <TextView
        style="@style/AuthEditTitle"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/set_label" />

    <EditText
        android:id="@+id/number"
        style="@style/EditTextAppStyle"
        android:layout_marginBottom="8dp"
        android:maxLength="2"
        android:hint="@string/digit_set_number_hint"
        android:inputType="numberDecimal"
        android:nextFocusDown="@id/last_name"
        android:nextFocusForward="@+id/saveButton" />

    <Button
        android:id="@+id/scanButton"
        style="@style/GreenButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_qrcode"
        android:drawablePadding="16dp"
        android:drawableTint="@color/color_selector_white"
        android:gravity="start|center_vertical"
        android:paddingStart="118dp"
        android:text="@string/scan_ticket" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/saveButton"
            style="@style/WhiteButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="16dp"
            android:text="@string/save" />
    </FrameLayout>
</LinearLayout>