<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/main_container_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/text1"
            style="@style/AuthEditTitle"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:text="@string/signup_selfie" />

        <com.jackandphantom.circularimageview.CircleImage
            android:id="@+id/avatar"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:src="@drawable/avatar_circle"
            app:border_color="#FF0608"
            app:border_width="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            style="@style/AuthEditTitle"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/signup_name_title" />

        <EditText
            android:id="@+id/first_name"
            style="@style/EditTextAppStyle"
            android:layout_marginBottom="8dp"
            android:hint="@string/signup_name_hint"
            android:inputType="textPersonName"
            android:nextFocusDown="@id/last_name" />

        <TextView
            style="@style/AuthEditTitle"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/signup_lastname_title" />

        <EditText
            android:id="@+id/last_name"
            style="@style/EditTextAppStyle"
            android:layout_marginBottom="8dp"
            android:hint="@string/signup_last_name_hint"
            android:inputType="textPersonName"
            android:nextFocusDown="@id/city" />

        <LinearLayout
            android:id="@+id/seller_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/AuthEditTitle"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/signup_city_title" />

            <Spinner
                android:id="@+id/city"
                style="@style/EditTextAppStyle"
                android:layout_marginBottom="16dp"
                android:entries="@array/cities" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="14dp"
                android:background="@color/greyCoverPhoto" />

            <TextView
                style="@style/AuthEditTitle"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/phone_number"
                style="@style/EditTextAppStyle"
                android:layout_marginBottom="8dp"
                android:hint="@string/signup_phone_hint"
                android:inputType="phone"
                android:nextFocusDown="@id/line_id" />

            <TextView
                style="@style/AuthEditTitle"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:text="@string/line_id"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/line_id"
                style="@style/EditTextAppStyle"
                android:layout_marginBottom="8dp"
                android:hint="@string/line_id_hint"
                android:nextFocusDown="@id/wechat_id" />

            <TextView
                style="@style/AuthEditTitle"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:text="@string/wechat_id"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/wechat_id"
                style="@style/EditTextAppStyle"
                android:layout_marginBottom="8dp"
                android:hint="@string/wechat_id_hint"
                android:nextFocusDown="@id/whatsapp_id" />

            <TextView
                style="@style/AuthEditTitle"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:text="@string/what_sapp"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/whatsapp_id"
                style="@style/EditTextAppStyle"
                android:layout_marginBottom="8dp"
                android:hint="@string/what_sapp_hint"
                android:inputType="phone"
                android:nextFocusDown="@id/national_id" />

            <TextView
                style="@style/AuthEditTitle"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/national_id" />

            <EditText
                android:id="@+id/national_id"
                style="@style/EditTextAppStyle"
                android:layout_marginBottom="8dp"
                android:hint="@string/signup_nid_hinty"
                android:inputType="textCapCharacters"
                android:nextFocusDown="@id/signup_button" />


            <TextView
                style="@style/AuthEditTitle"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/signup_nid_scan_title" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="24dp">

                <ImageView
                    android:id="@+id/id_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@drawable/national_id_scan_bg"
                    android:contentDescription="@string/signup_id_card"
                    android:padding="24dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_camera" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/signup_button"
            style="@style/BlueButtonStyle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save" />
    </LinearLayout>

</ScrollView>